<resources>
    <string name="app_name">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="forecast">Forecast</string>
    <string name="settings">Settings</string>
    <string name="weatherForecast">Weather Forecast</string>
    <string name="currentWeather">Current Weather</string>
    <string name="enter_city">Enter City</string>
    <string name="go">Go</string>
    <string name="high">High :</string>
    <string name="low">Low :</string>
    <string name="units">Units</string>
    <string name="dateFormat1">d MMMM, hh:mm:ss a</string>
    <string name="dateFormat">d MMMM, hh:mm:ss a</string>
    <string name="celsiusSymbol">°C</string>
    <string name="fahrenheitSymbol">°F</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="dateFormatObtained">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="dateFormatForecast">EE , dd LLL </string>
    <string name="updated">Updated :</string>
    <string name="ago"> ago</string>
    <string name="day">day </string>
    <string name="hr"> hr</string>
    <string name="min"> min</string>
    <string name="sec"> sec</string>
    <string name="now">Now</string>
    <string-array name="unitsM" >
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="unitsI" >
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>


</resources>