<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weather.ui.TodayFragment"
        android:label="@string/currentWeather"
        tools:layout="@layout/today_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.weather.ui.ForecastFragment"
        android:label="@string/weatherForecast"
        tools:layout="@layout/forecast_fragment" />


<fragment
    android:id="@+id/navigation_notifications"
    android:name="com.example.weather.ui.SettingsFragment"
    android:label="@string/settings"
    tools:layout="@layout/settings_fragment" />
</navigation>